--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-next": "14.0.1",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
+    "flag-icons": "^7.1.0",
     "fuse.js": "^7.0.0",
     "geofire-common": "^6.0.0",
     "js-cookie": "^3.0.5",
